Fixed Horizontal Scroll Bar

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,14 @@ body {
 	position: relative;
 	width: auto;
 	background-color: #ffffff;
+	overflow-x: hidden;
+}
+.hidden-thing {
+  position: absolute;
+  left: 100%;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
 }
 /*-------------------------------------------FONTS---------------------------------------------*/
 @font-face {
